# ComfyUI-TTS-OAI

./: CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml  tts_node.py
custom_nodes/: tts_node.py
example_workflows/: tts-oai-example.json
